# Gopher-ROS

./: LICENSE  README.md
gopher_control/: CMakeLists.txt  package.xml
gopher_control/launch/: falcon_control.launch  head_tracking_main_camera_control.launch  joystick_control.launch  keyboard_control.launch  logitech_steering_wheel_control.launch
gopher_control/src/: falcon_interface.cpp  head_tracking_interface.py  keyboard_and_mouse.py  main_camera_control_interface.cpp  move_group_interface.py  teleop_twist_joy.cpp
gopher_description/launch/: view_model.launch
gopher_gazebo/: CMakeLists.txt  package.xml
gopher_gazebo/launch/: launch_environment.launch  single_gopher.launch  spawn_gopher.launch  spawn_multiple_gopher.launch
gopher_gazebo/rviz/: rviz_config.rviz  rviz_config_mobile.rviz
gopher_gazebo/src/: bag_location.py  move_robot.py
gopher_moveit/: CMakeLists.txt  package.xml
gopher_moveit/launch/: gopher_moveit.launch
gopher_moveit/src/: plan_trajectory.py
gopher_moveit/srv/: PlanTrajectory.srv
gopher_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gopher_moveit_config/config/: Gopher.srdf  (+8 more)
gopher_navigation/: CMakeLists.txt  REAMME.md  package.xml
gopher_navigation_gui/: CMakeLists.txt  mainpage.dox  package.xml
gopher_navigation_gui/include/gopher_navigation_gui/: main_window.hpp  qnode.hpp  qrviz.hpp
gopher_navigation_gui/resources/: images.qrc
gopher_navigation_gui/src/: main.cpp  main_window.cpp  qnode.cpp  qrviz.cpp
gopher_navigation_gui/ui/: main_window.ui
hospital_gazebo/: CMakeLists.txt  package.xml
(+123 files in other folders)
