<?xml version="1.0"?>
<package>
  <name>gopher_navigation_gui</name>
  <version>0.1.0</version>
  <description>

     gopher_navigation_gui

  </description>
  <maintainer email="JoeyZhong@gmail.com">JoeyZhong</maintainer>
  <author>JoeyZhong</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>qt_build</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_depend>libqt4-dev</build_depend> -->
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <!--run_depend>qt_build</run_depend-->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
 
</package>
